# alpaqa

./: CMakeLists.txt  README.md
Coverage/: index-sort-f.html  index-sort-l.html  index.html
Coverage/src/include/alpaqa/: alm.hpp.func-sort-c.html  index.html  (+7 more)
Doxygen/: dir_31d7fed822d7341cdd262c3a79ffd3cb_dep.map  dir_31d7fed822d7341cdd262c3a79ffd3cb_dep.md5  dir_6b78772af78d30cbc031af89b589b90a_dep.map  dir_6b78772af78d30cbc031af89b589b90a_dep.md5  dir_8530bb3e8fc74ffa88424bbdd355b39c_dep.map  dir_8530bb3e8fc74ffa88424bbdd355b39c_dep.md5  dir_9309d297cdd287e0c6ef38d5b07c9a8e_dep.map  dir_9309d297cdd287e0c6ef38d5b07c9a8e_dep.md5  dir_f3d2fc08cfaaa4a4d8ce50d8c16f678c_dep.map  dir_f3d2fc08cfaaa4a4d8ce50d8c16f678c_dep.md5  dir_f57d8358e43ebe22b9790021173863ad_dep.map  dir_f57d8358e43ebe22b9790021173863ad_dep.md5  ext-resources.html  files.html  page_math.html
Doxygen/search/: all_1.js  all_9.js
Sphinx/: changelog.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
Sphinx/_modules/: index.html
Sphinx/_modules/alpaqa/: casadi_problem.html
Sphinx/_static/: pygments.css
Sphinx/contribution/: how_to_contribute.html
Sphinx/examples/: example_minimal.html  examples_landing_page.html  regression_problem.html
Sphinx/examples/mpc/: mpc_landing_page.html
Sphinx/install/: installation.html
Sphinx/reference/: cpp-api.html  python-api.html
Sphinx/shared/: definitions.html
Sphinx/usage/: gettingstarted.html
develop/Coverage/: index-sort-l.html  index.html
develop/Doxygen/: C_09_09_2CasADi_2Rosenbrock_2main_8cpp-example.html  C_09_09_2CustomControlCppProblem_2main_8cpp-example.html  C_09_09_2CustomCppProblem_2main_8cpp-example.html  C_09_09_2DLProblem_2main_8cpp-example.html  C_09_09_2FortranProblem_2main_8cpp-example.html  C_09_09_2SimpleUnconstrProblem_2main_8cpp-example.html  CasADiControlProblem_8cpp.html  CasADiControlProblem_8cpp_source.html  CasADiControlProblem_8hpp.html  CasADiControlProblem_8hpp_source.html  CasADiControlProblem_8tpp.html  CasADiControlProblem_8tpp_source.html  CasADiFunctionWrapper_8hpp.html  CasADiFunctionWrapper_8hpp_source.html  CasADiLoader-util_8hpp.html  CasADiLoader-util_8hpp_source.html  CasADiProblem_8cpp.html  CasADiProblem_8cpp_source.html  CasADiProblem_8hpp.html  CasADiProblem_8hpp_source.html  CasADiProblem_8tpp.html  CasADiProblem_8tpp_source.html  External-Resources_8md.html  Inner-solvers_8md.html  Installation_8md.html  Math_8md.html  Problem-formulations_8md.html  Python_2simple_optimization_2getting-started_8py-example.html  Python_2simple_optimization_2rosenbrock_8py-example.html  accelerators_2anderson_8hpp.html  accelerators_2anderson_8hpp_source.html  accelerators_2lbfgs_8hpp.html  accelerators_2lbfgs_8hpp_source.html  alloc-check_8hpp.html  alloc-check_8hpp_source.html  alm-driver_8hpp.html  alm-driver_8hpp_a51b2a2cde56762bcb43a2f4da0913f98_cgraph.map  alm-driver_8hpp_a51b2a2cde56762bcb43a2f4da0913f98_cgraph.md5  alm-driver_8hpp_ae4ef291d9ec9d55ee804b5723ea2e641_cgraph.map  alm-driver_8hpp_ae4ef291d9ec9d55ee804b5723ea2e641_cgraph.md5  (+943 more)
develop/Doxygen/search/: all_12.js  functions_10.js
develop/Sphinx/: output.txt  searchindex.js
examples/CUTEst/Rosenbrock/: main.cpp
examples/CasADi/Rosenbrock/: codegen-rosenbrock.py  main.cpp
examples/Presentation/Cpp/: main.cpp
examples/Presentation/Python/: main.py
examples/simple_optimization/python/: rosenbrock-only-box-constr.py  rosenbrock.py
scripts/: requirements-docs.txt
src/: CMakeLists.txt
src/alpaqa/: CMakeLists.txt  __init__.py  alpaqa.cpp  kwargs-to-struct.hpp  polymorphic-inner-solver.hpp  problem.hpp  test.py
src/alpaqa/casadi_generator/: __init__.py
src/alpaqa/casadi_loader/: __init__.py
src/include/alpaqa/: alm.hpp
src/src/inner/: structured-panoc-lbfgs.cpp
src/src/reference-problems/: himmelblau.cpp  riskaverse-mpc.cpp
src/src/util/: problem.cpp
test/: test-alm-riskmpc.cpp  test-alm.cpp  test-guarded-aa-pga.cpp  test-panoc-cosh-1D.cpp  test-panoc-cosh.cpp  test-panoc-quadratic.cpp  test-panoc.cpp  test-problem.cpp  test-ringbuffer.cpp
test/drivers/: CMakeLists.txt
test/drivers/src/: driver.cpp
test/python/util/: loader.py
test/ref/src/: panoc-ref.cpp
(+348 files in other folders)
